corrected code sniffs